alpm-types/src/version/snapshots/pkg_generic::parse_error_in_version_from_string@case_1_two_pkgrel.snap
---
source: alpm-types/src/version/pkg_generic.rs
---
error: invalid alpm-package-version
 | 
 | 1:foo-1-1
 |        ^ expected end of the version string
